--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 
   <div class="coming-container">
-    <h1 class="display-4 fw-bold">🚀 Coming Soon</h1>
+    <h1 class="display-4 fw-bold">🚀 welcome    </h1>
     <p class="lead">We’re working hard to give you an amazing experience. Stay tuned!</p>
 
     <!-- Countdown -->
